force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__DiscontinuationReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiscontinuationReason__c</fullName>
    <label>Discontinuation Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiscontinuationReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>