force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__EligibleMinimumAgeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__EligibleMinimumAgeNumber__c</fullName>
    <label>Eligible Minimum Age</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EligibleMinimumAgeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>