force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__InclusionExclusionCriteriaText__c.field-meta.xml
<CustomField>
    <fullName>ssot__InclusionExclusionCriteriaText__c</fullName>
    <label>Inclusion And Exclusion Criteria</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InclusionExclusionCriteriaText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>