force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__IntentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__IntentType__c</fullName>
    <label>Intent Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IntentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>