force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__Phase__c.field-meta.xml
<CustomField>
    <fullName>ssot__Phase__c</fullName>
    <label>Phase</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Phase</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>