force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__PrimaryContactPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryContactPhoneId__c</fullName>
    <label>Primary Contact Phone</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryContactPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>