force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__rel_1716667426448_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716667426448_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResearchStudy_BlindingTypeCodeId_map_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>ResearchStudy_BlindingTypeCodeId_map_rel</relationshipLabel>
    <relationshipName>rel_1716667426448_end</relationshipName>
    <type>Lookup</type>
</CustomField>