force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__UniformResourceIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniformResourceIdentifier__c</fullName>
    <label>Uniform Resource Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniformResourceIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>